# NEEMPyCRAMInterface

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
examples/: neam_loader.ipynb  neam_to_plan.ipynb  replay_neems.ipynb  replay_neems_in_pycram.ipynb
resources/: LeftHand.dae  RightHand.dae  SM_MilkPitcher.dae  SM_Pitcher.dae  SM_Pot.dae  Salt_container.dae  cup.dae  get_pouring_neems.sql  jeroen_cup.dae  particle.dae
src/: __init__.py
src/neem_pycram_interface/: EventDetectors.py  Events.py  __init__.py  episode_segmenter.py  neem_pycram_interface.py  neem_segmenter.py  neem_segmentor.py  utils.py
src/neem_query/: __init__.py  enums.py  neem_interface.py  neem_pycram_interface.py  neem_query.py  neems_database.py  query_result.py  utils.py
src/pycram/: neem_loader.py
src/pycram/neems/: neem_loader.py  neem_loader_sqlalchemy.py  neem_sqlalchemy.py
src/pycram/sql_neems/: neem_alchemy.py  neem_interface.py  neem_query.py
test/: test_neem_interface.py  test_neem_loader.py  test_neem_pycram_interface.py  test_neem_query.py  test_neem_segmentor.py  test_neem_sqlalchemy.py  test_query_result.py  test_utils.py
